    which could allow injecting debug .debs for example.
  * Annotate any non-deb binary descriptions (not just udebs) with their
    package type in dpkg-genchanges.
  * Remove outdated local copy of the Debian README.mirrors.txt file from
    dselect ftp access method, and print a message pointing to the current
    URL instead. Closes: #784966

  * Perl modules:
    - Rename and deprecate Dpkg::Gettext _g function with new g_.
    - Assume in Dpkg::Arch that the abitable is always present, and bump
      libdpkg-perl Depends on dpkg to 1.16.3, the version introducing the file.
    - Remove support for GCC_TARGET environment variable from Dpkg::Shlibs.
      This was a temporary workaround for very old gcc toolchains. See #453267.
    - Prefer multiarch paths to multilib ones in Dpkg::Shlibs.
      Thanks to Helmut Grohne <helmut@subdivi.de>. Closes: #772184
    - Enable sub-second timestamps in Dpkg::Source::Patch by using Time::HiRes.
    - Use TMPDIR instead of manually setting DIR on tempfile() call in
      Dpkg::Source::Package::V2.
    - Switch Dpkg::Checksums from using checksum programs to the more portable
      Digest modules. Obsolete the 'program' property, and add a 'name' one.
    - Add support for $DEFAULT_TEXT_DOMAIN to Dpkg::Gettext, so that the Dpkg
      perl modules can always produce localized messages.
    - Fix OpenPGP Armor Header Line parsing in Dpkg::Control::Hash. We should
      only accept [\r\t ] as trailing whitespace, although RFC4880 does not
      clarify what whitespace really maps to, we should really match the GnuPG
      implementation anyway, as that's what we use to verify the signatures.
      Reported by Jann Horn <jann@thejh.net>. Fixes CVE-2015-0840.
    - Pass PATCH_GET environment varialbe instead of -g0 to the patch command
      in Dpkg::Source::Patch. This allows using non-GNU patch programs, like
      FreeBSD's patch.
    - Accept an %opts argument for the Dpkg::Control::Info constructor, and