@@ -73,6 +73,8 @@ dpkg (1.18.0) UNRELEASED; urgency=low
   * Remove outdated local copy of the Debian README.mirrors.txt file from
     dselect ftp access method, and print a message pointing to the current
     URL instead. Closes: #784966
+  * Cleanup default dpkg-shlibdeps shared library directory search list:
+    - Do not add cross-root directories (/<triplet>/ and /usr/<triplet>/).
 
   * Perl modules:
     - Rename and deprecate Dpkg::Gettext _g function with new g_.
